fixed chat zoom and message spacing

--- a/static/style.css
+++ b/static/style.css
@@ -289,7 +289,7 @@ label{
 
     flex-direction:column;
 
-    gap:50px;
+    gap:20px;
 
     scroll-behavior:smooth;
 
